--- a/style.css
+++ b/style.css
@@ -125,15 +125,49 @@ a{
     left: 0;
 }
 .input_box input:focus ~ i.email,
-.input_box input:focus~ i.password{
+.input_box input:focus ~ i.password{
     color: #7d2ae8;
 }
 .input_box i.pw_hide{
     right: 0;
     font-size: 18px;
 }
-
-
+.option_field{
+    margin-top: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.form_container a{
+    font-size: 12px;
+    color: #7d2ae8;
+}
+.form_container a:hover{
+    text-decoration: underline;
+}
+.checkbox{
+    
+    display: flex;
+    column-gap: 8px;
+    white-space: nowrap;
+    font-size: 12px;
+}
+.checkbox input{
+    accent-color: #7d2ae8;
+}
+.checkbox label{
+    font-size: 12px;
+    cursor: pointer;
+    user-select: none;
+    color: #0b0217;
+}
+.form_container .button{
+    background: #7d2ae8;
+    margin-top: 30px;
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 10px;
+}
 
 
 
