--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a{
 .nav_logo{
     font-size: 25px;
 }
-.nav_link{
+.nav_item{
     color: #fff;
 }
 .nav_link:hover{
@@ -51,6 +51,7 @@ a{
     border:  2px solid #fff;
     background: transparent;
     border-radius:  6px;
+    cursor: pointer;
 }
 .button:active{
     transform: scale(0.98);
@@ -64,21 +65,53 @@ a{
     background-image: url("image.jpg");
     background-size: cover;
     background-position: center;
-    cursor: pointer;
+}
+.home::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s ease-out;
+}
+.home.show::before{
+    opacity: 1;
+    pointer-events: auto;
 }
 /* Form*/
 .form_container{
-    position: absolute;
+    position: fixed;
     max-width: 320px;
     width: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.2);
     z-index: 101;
     background-color: #fff;
     padding: 25px;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s ease-out;
+}
+.home.show .form_container{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.signup_form{
+    display: none;
+}
+.form_container.active .signup_form{
+    display: block;
+}
+.form_container.active .login_form{
+    display: none;
 }
 .form_close{
     position: absolute;
@@ -98,7 +131,7 @@ a{
     position: relative;
     margin-top: 30px;
     width: 100%;
-    height: 45px;
+    height: 40px;
 }
 .input_box input{
     height: 100%;
@@ -131,12 +164,13 @@ a{
 .input_box i.pw_hide{
     right: 0;
     font-size: 18px;
+    cursor: pointer;
 }
 .option_field{
     margin-top: 14px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .form_container a{
     font-size: 12px;
@@ -150,7 +184,7 @@ a{
     display: flex;
     column-gap: 8px;
     white-space: nowrap;
-    font-size: 12px;
+
 }
 .checkbox input{
     accent-color: #7d2ae8;
@@ -168,7 +202,11 @@ a{
     padding: 10px 0;
     border-radius: 10px;
 }
-
+.login_signup{
+    font-size: 12px;
+    text-align: center;
+    margin-top: 15px;
+}
 
 
 
